# raylib_template

./: .gitignore  .gitmodules  AddGitSubmodule.cmake  CMakeLists.txt  README.md  bootstrap.bat  bootstrap.sh  raylib_rename.py
src/: main.c  minshell.html
